--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <html>
 <head>
-  <title>Control de versiones</title>
+  <title>Scrum: cerdos y gallinas</title>
 
   <meta charset='utf-8'>
   <script
-  src='http://html5slides.googlecode.com/svn/trunk/slides.js'></script>
+  src='js/slides.js'></script>
   <link rel="stylesheet" type="text/css" href="index.css" />
 
 </head>
@@ -16,338 +16,335 @@
 
 <body style='display: none'>
 
-  <section class='slides layout-regular template-default'>
+          <section class='slides layout-regular template-default'>
 
-    <article>
-      <h1>
-        Control de versiones
-        <br>
-        en la empresa
-      </h1>
-      <p>
-        Javier Martínez
-        <br>
-        19 de marzo 2015
-      </p>
+            <article>
+              <h1>
+                Scrum
+                <br>
+                Cerdos y gallinas
+              </h1>
+              <p>
+                Javier Martínez
+                <br>
+                23 de marzo 2015
+              </p>
+            </article>
+
+            <article>
+              <h1>
+                <center>Frogtek</center>
+              </h1>
+            </article>
+
+            <article>
+              <h3>
+                <center>Frogtek</center>
+              </h3>
+              <br><br><br>
+              <center><img style='height: 400px' src='images/frogtek.jpg'></center>
+
+            </article>
+
+            <article>
+              <h3>
+                <center>Agile Manifesto</center>
+              </h3>
+            </br></br>
+            <center><img style='height: 500px' src='images/manifesto.png'></center>
+          </article>
+
+          
+          <article>
+            <h3>
+              <center>Agile - Cambio</center>
+            </h3>
+          </br></br>
+          <center><img style='height: 500px' src='images/cannon.jpg'></center>
+        </article>
+
+
+        <article>
+          <h3>
+            <center>Agile - Cambio</center>
+          </h3>
+        </br></br>
+        <center><img style='height: 500px' src='images/missile.jpg'></center>
+      </article>
+
+      <article>
+        <h3>
+          <center>Resumen</center>
+        </h3>
+      </br></br>
+      <p>Personas y equipos</p>
+      <p>Colaboracíón con el cliente</p>
+      <p>Adaptación al cambio</p>
+
     </article>
 
     <article>
       <h1>
-        <center>Frogtek</center>
+        <center>Scrum</center>
       </h1>
     </article>
 
     <article>
       <h3>
-        <center>Frogtek</center>
+        <center>Scrum</center>
       </h3>
-      <br><br><br>
-      <center><img style='height: 400px' src='images/frogtek.jpg'></center>
-
-    </article>
-    <article>
-      <h1>
-        <center>Control de versiones</center>
-      </h1>
-    </article>
-
-
-    <article>
-      <h3>
-        <center>VCS - Version Control System</center>
-      </h3>
-
       <ul class="build">
         <li>
-          CVS
+          Desarrollo iterativo incremental
         </li>
         <li>
-          SVN
+          Sprints
         </li>
         <li>
-          Git
-        </li>
-        <li>
-          Mercurial
-        </li>  
-        <li>
-          ...
-        </li>                  
+          Prácticas + Roles
+        </li>                 
       </ul>
     </article>
 
     <article>
-      <h1>
-        <center>¿Por qué utilizar control de versiones?</center>
-      </h1>
-    </article>
-
-
-    <article>
       <h3>
-        <center>¿Por qué utilizar control de versiones?</center>
-      </h3>
-          </br></br>
-        <center><img style='height: 300px' src='images/ftp.png'></center>
-
-    </article>
-
-
-    <article>
-      <h1>
-        <center>Histórico</center>
-      </h1>
-    </article>
-
-    <article>
-      <h1>
-        <center>Legibilidad</center>
-      </h1>
-    </article>
-
-    <article>
-      <h3>
-        <center>Legibilidad</center>
+        <center>Scrum - Sprint</center>
       </h3>
     </br></br>
-    <ul class="build">
-      <li>
-        ¿Quién ha escrito este código
-      </li>
-      <li>
-        ¿Cuándo ha escrito este código?
-      </li>
-      <li>
-        ¿Por qué ha escrito este código? ¡Intención!
-      </li>                 
-    </ul>
+    <center><img style='height: 400px' src='images/waterfall.png'></center>
   </article>
 
   <article>
     <h3>
-      <center>Legibilidad</center>
+      <center>Scrum - Sprint</center>
     </h3>
   </br></br>
-  <center><img style='height: 300px' src='images/gitlog.png'></center>
-</article>
+  <center><img style='height: 400px' src='images/scrum.png'></center>
+  </article>
 
-<article>
-  <h1>
-    <center>Backup</center>
-  </h1>
-</article>
 
-<article>
-  <h1>
-    <center>Compartir</center>
-  </h1>
-</article>
+  <article>
+    <h3>
+      <center>Scrum - Incremental vertical</center>
+    </h3>
+  </br></br>
+  <center><img style='height: 300px' src='images/incremental.png'></center>
+  </article>
 
-<article>
-  <h4>
-    En resumen: ¿por qué utilizar control de versiones?
-  </h4>
+  <article>
+    <h3>
+      <center>Scrum - Board</center>
+    </h3>
+  </br></br>
+  <center><img style='height: 450px' src='images/board.png'></center>
+  </article>
+  <article>
+    <h3>
+      <center>Scrum - User Stories</center>
+    </h3>
+  </br></br>
+  <center><img style='height: 400px' src='images/uscard0.jpg'></center>
+  </article>
+
+
+  <article>
+    <h3>
+      <center>Scrum - User Stories</center>
+    </h3>
+  </br></br>
+  <center><img style='height: 500px' src='images/uscard.png'></center>
+  </article>
+
+  <article>
+    <h1>
+      <center>Scrum - Roles</center>
+    </h1>
+  </br></br>
+  </article>
+
+  <article>
+    <h3>
+      <center>Scrum - Roles</center>
+    </h3>
+  </br></br>
+  <p>Roles cerdo</p>
   <ul class="build">
     <li>
-      Histórico
+      Product Owner
     </li>
     <li>
-      Legibilidad (¡Intención!)
+      Scrum master
     </li>
     <li>
-      Backup
-    </li>
-    <li>
-      Compartir
-    </li>     
-    <li>
-      Pero sobre todo...
-    </li>    
-    <h2>¡poder culpar a alguien!</h2>
+      Equipo
+    </li>                 
   </ul>
-</article>
-
-
-
-<article>
-  <h1>
-    ¿Por qué utilizar control de versiones descentralizado?
-  </h1>
-</article>
-
-<article>
-  <h3>
-    ¿Por qué utilizar control de versiones descentralizado?
-  </h3>
-</br>
-<p>
-  <img style='height: 400px' src='images/gitversions.jpg'>
-</p>
-</article>
-
-<article>
-  <h1>
-    Repositorios
-  </h1>
-</article>
-
-<article>
-  <h1>
-    Conflictos
-  </h1>
-</article>
-
-<article>
-  <h3>
-    Ramas
-  </h3>
-  <img style='height: 300px' src='images/githistory.png'>
-  <p>
-    Bifurcación
-  </p>
-  <p>
-    En el desarrollo de software vamos a necesitar ramificar funcionalidades
-  </p>
-</article>
-
-<article>
-  <h3>
-    Git flow
-  </h3>
-</br>
-<img style='height: 500px' src='images/gitflow.png'>
-
-</article>
-
-<article>
-  <h3>
-    Utilizando Git
-  </h3>
-</br>
-<center><img style='height: 500px' src='images/pushmaster.jpg'></center>
-
-</article>
-
-
-
-<article>
-  <h1>
-    <center>git status</center>
-  </h1>
-    <p></p>
-</article>
-
-<article>
-  <h1>
-    <center>git diff</center>
-  </h1>
-
-</article>
-
-<article>
-  <h1>
-    <center>git log</center>
-  </h1>
-</article>
-
-<article>
-  <h4>
-    En resumen: comandos esenciales para comprobar el estado
-  </h4>
+  <p>Roles gallina</p>
   <ul class="build">
     <li>
-      git status: muestra los archivos con cambios respecto al repositorio
+      Usuarios de la aplicación
     </li>
     <li>
-      git diff: muestra las diferencias de los cambios respecto al repositorio
+      Clientes
     </li>
     <li>
-      git log: muestra el histórico de commits de la rama actual
-    </li>
+      Managers
+    </li>                 
   </ul>
-</article>
+  </article>
+
+  <article>
+    <h1>
+      <center>Scrum - Product Owner</center>
+    </h1>
+  </br>
+  </article>
+
+  <article>
+    <h3>
+      <center>Scrum - Product Owner VS Team</center>
+    </h3>
+    <center><img style='height: 500px' src='images/rightthings.jpg'></center>
+
+  </article>
+
+  <article>
+    <h1>
+      <center>Scrum - Daily scrum (standup meeting)</center>
+    </h1>
+  </br></br>
+  </article>
+
+  <article>
+    <h1>
+      <center>Scrum - Sprint planning</center>
+    </h1>
+  </br></br>
+  </article>
+
+  <article>
+    <h1>
+      <center>Scrum - Sprint preview (demo)</center>
+    </h1>
+  </br></br>
+  </article>
+
+  <article>
+    <h1>
+      <center>Scrum - Retrospectivas</center>
+    </h1>
+  </br></br>
+  </article>
+  <article>
+    <h3>
+      <center>Scrum - Resumen</center>
+    </h3>
+    <br><br>
+  <center><img style='height: 450px' src='images/scrumresumen.jpg'></center>
+  </article>
 
 
-<article>
-  <h1>
-    <center>git add</center>
-  </h1>
-</article>
+    <article>
+    <h3>
+      <center>Kanban</center>
+    </h3>
+  </br></br>
+  <p>Visualización del trabajo</p>
+  <p>Equipos autoorganizativos</p>
+  <p>Mejora continua</p>  
+  </article>
 
-<article>
-  <h1>
-    <center>git commit</center>
-  </h1>
-</article>
-
-<article>
-  <h1>
-    <center>Github</center>
-  </h1>
-
-</article>
-
-<article>
-  <h1>
-    <center>Repositorio Remoto vs Repositorio local</center>
-  </h1>
-</article>
-
-<article>
-  <h1>
-    <center>git pull: actualizar repositorio local</center>
-    <center>git push: actualizar repositorio remoto</center>    
-  </h1>
-
-</article>
-
-<article>
-  <h1>
-    <center>Github: Pull request</center>
-  </h1>
-</article>
-
-<article>
-  <h3>
-    <center>Github: Pull request</center>
-  </h3>
-  <p>Control de flujo</p>
-  <p>Revisión de código</p>
-</article>
-
-<article>
-  <h1>
-    <center>Github: Pull request</center>
-  </h1>
-  <center><a href='https://github.com/Frogtek/cloudtek/pull/912' target="_blank">Enlace</a></center>
-</article>
-
-<article>
-  <h1>
-    <center>Github: Gráficas</center>
-  </h1>
-  <center><a href='https://github.com/Frogtek/cloudtek/network' target="_blank">Enlace</a></center>
-</article>
-
-<article>
-  <h1>
-    <center>¿Preguntas?</center>
-  </h1>
-</article>
+      <article>
+    <h3>
+      <center>Kanban</center>
+    </h3>
+  </br></br>
+    <center><img style='height: 500px' src='images/kanbanvsscrum.png'></center>
 
 
-<article>
-  <h1>
-    <center>Muchas gracias</center>
+  </article>
+  <article>
+    <h3>
+      <center>Scrumban</center>
+    </h3>
+  </br></br>
+  <center><img style='height: 400px' src='images/scrumban.jpg'></center>
+  </article>
+
+    <article>
+    <h3>
+      <center>Scrumban</center>
+    </h3>
+  </br></br>
+  <center><img style='height: 450px' src='images/scrumban2.jpg'></center>
+  </article>
+
+  <article>
+    <h1>
+      <center>¿Y ahora qué?</center>
+    </h1>
+  </article>
 
 
-  </h1>
-  <ul>
-    <li>agile-aragon.org</li>
-    <li>gitimmersion.com</li>
-  </ul>
-</article>
+  <article>
+    <h1>
+      <center>Kaizen VS Kaikaku</center>
+    </h1>
+    
+    <p>Kaizen: modelo orgánico</p>
+    <p>Kaikaku: ruptura</p>
+  </article>
 
-</section>
-</body>
-</html>
+
+ <article>
+    <h1>
+      <center>¿Preguntas?</center>
+    </h1>
+
+
+  </article>
+
+
+  <article>
+    <h1>
+      <center>Muchas gracias</center>
+    </h1>
+
+      <center>agile-aragon.org</center>
+
+  </article>
+
+
+  <article>
+    <h1>
+      <center>Definición de equipo</center>
+    </h1>
+  </article>
+
+  <article>
+    <h1>
+      <center>Roles</center>
+    </h1>
+  </article>
+
+  <article>
+    <h1>
+      <center>Estimaciones</center>
+    </h1>
+  </article>
+
+    <article>
+    <h1>
+      <center>¿Sprints?</center>
+    </h1>
+  </article>
+
+      <article>
+    <h1>
+      <center>Tamaño del sprint</center>
+    </h1>
+  </article>
+
+  </section>
+  </body>
+  </html>
