#Changes to slides

--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
 
             </article>
 
+         <article>
+              <h1>
+                <center>¿Por qué llevan traje en algunas empresas de software?</center>
+              </h1>
+            </article>
+
+         <article>
+              <h1>
+                <center>Herencia</center>
+              </h1>
+            </article>
+
+                  <article>
+              <h1>
+                <center>Las reglas no valen</center>
+              </h1>
+            </article>
+
             <article>
               <h3>
                 <center>Agile Manifesto</center>
@@ -54,7 +72,7 @@
             <center><img style='height: 500px' src='images/manifesto.png'></center>
           </article>
 
-          
+
           <article>
             <h3>
               <center>Agile - Cambio</center>
@@ -74,7 +92,7 @@
 
       <article>
         <h3>
-          <center>Resumen</center>
+          <center>Agile - Resumen</center>
         </h3>
       </br></br>
       <p>Personas y equipos</p>
@@ -102,7 +120,7 @@
         </li>
         <li>
           Prácticas + Roles
-        </li>                 
+        </li>
       </ul>
     </article>
 
@@ -177,7 +195,7 @@
     </li>
     <li>
       Equipo
-    </li>                 
+    </li>
   </ul>
   <p>Roles gallina</p>
   <ul class="build">
@@ -189,7 +207,7 @@
     </li>
     <li>
       Managers
-    </li>                 
+    </li>
   </ul>
   </article>
 
@@ -197,6 +215,24 @@
     <h1>
       <center>Scrum - Product Owner</center>
     </h1>
+    <center><p>Decide qué hacer y cuándo hacerlo</p>
+    <p>"Cliente con perspectiva de usuario"</p></center>
+  </br>
+  </article>
+
+  <article>
+    <h1>
+      <center>Scrum - Scrum Master</center>
+    </h1>
+    <center><p>Garantiza que Agile se está cumpliendo</p></center>
+  </br>
+  </article>
+
+    <article>
+    <h1>
+      <center>Scrum - Equipo de Desarrollo</center>
+    </h1>
+    <center><p>Entregar el producto</p></center>
   </br>
   </article>
 
@@ -251,7 +287,7 @@
   </br></br>
   <p>Visualización del trabajo</p>
   <p>Equipos autoorganizativos</p>
-  <p>Mejora continua</p>  
+  <p>Mejora continua</p>
   </article>
 
       <article>
@@ -290,7 +326,7 @@
     <h1>
       <center>Kaizen VS Kaikaku</center>
     </h1>
-    
+
     <p>Kaizen: modelo orgánico</p>
     <p>Kaikaku: ruptura</p>
   </article>
