--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>Scrum: cerdos y gallinas</title>
+  <title>De Agile al equipo y del equipo a Agile</title>
 
   <meta charset='utf-8'>
   <script
@@ -16,371 +16,370 @@
 
 <body style='display: none'>
 
-          <section class='slides layout-regular template-default'>
+  <section class='slides layout-regular template-default'>
 
-            <article>
-              <h1>
-                Scrum
-                <br>
-                Cerdos y gallinas
-              </h1>
-              <p>
-                Javier Martínez
-                <br>
-                23 de marzo 2015
-              </p>
-            </article>
+    <article>
+      <h1>
+        De Agile al equipo autoorganizado 
+      </h1>
+      <h3>
+        (y del equipo autoorganizado a Agile)
+      </h3>
+      <p>
+        Javier Martínez
+        <br>
+        18 de septiembre 2015
+      </p>
+    </article>
 
-            <article>
-              <h1>
-                <center>Frogtek</center>
-              </h1>
-            </article>
+    <article>
+      <h1>
+        <center>Agile</center>
+      </h1>
+    </article>
 
-            <article>
-              <h3>
-                <center>Frogtek</center>
-              </h3>
-              <br><br><br>
-              <center><img style='height: 400px' src='images/frogtek.jpg'></center>
-
-            </article>
-
-         <article>
-              <h1>
-                <center>¿Por qué llevan traje en algunas empresas de software?</center>
-              </h1>
-            </article>
-
-         <article>
-              <h1>
-                <center>Herencia</center>
-              </h1>
-            </article>
-
-                  <article>
-              <h1>
-                <center>Las reglas no valen</center>
-              </h1>
-            </article>
-
-            <article>
-              <h3>
-                <center>Agile Manifesto</center>
-              </h3>
-            </br></br>
-            <center><img style='height: 500px' src='images/manifesto.png'></center>
-          </article>
-
-
-          <article>
-            <h3>
-              <center>Agile - Cambio</center>
-            </h3>
-          </br></br>
-          <center><img style='height: 500px' src='images/cannon.jpg'></center>
-        </article>
-
-
-        <article>
-          <h3>
-            <center>Agile - Cambio</center>
-          </h3>
-        </br></br>
-        <center><img style='height: 500px' src='images/missile.jpg'></center>
-      </article>
-
-      <article>
-        <h3>
-          <center>Agile - Resumen</center>
-        </h3>
-      </br></br>
-      <p>Personas y equipos</p>
-      <p>Colaboracíón con el cliente</p>
-      <p>Adaptación al cambio</p>
+    <article>
+      <h1>
+        <center>Agile Manifesto</center>
+      </h1>
 
     </article>
 
     <article>
       <h1>
-        <center>Scrum</center>
+        <center>¿Por qué llevan traje en algunas empresas de software?</center>
+      </h1>
+    </article>
+
+    <article>
+      <h1>
+        <center>Herencia</center>
+      </h1>
+    </article>
+
+    <article>
+      <h1>
+        <center>Las reglas no valen</center>
       </h1>
     </article>
 
     <article>
       <h3>
-        <center>Scrum</center>
-      </h3>
-      <ul class="build">
-        <li>
-          Desarrollo iterativo incremental
-        </li>
-        <li>
-          Sprints
-        </li>
-        <li>
-          Prácticas + Roles
-        </li>
-      </ul>
-    </article>
-
-    <article>
-      <h3>
-        <center>Scrum - Sprint</center>
+        <center>Agile Manifesto</center>
       </h3>
     </br></br>
-    <center><img style='height: 400px' src='images/waterfall.png'></center>
-  </article>
-
-  <article>
-    <h3>
-      <center>Scrum - Sprint</center>
-    </h3>
-  </br></br>
-  <center><img style='height: 400px' src='images/scrum.png'></center>
+    <center><img style='height: 500px' src='images/manifesto.png'></center>
   </article>
 
 
   <article>
     <h3>
-      <center>Scrum - Incremental vertical</center>
+      <center>Agile - Cambio</center>
     </h3>
   </br></br>
-  <center><img style='height: 300px' src='images/incremental.png'></center>
-  </article>
-
-  <article>
-    <h3>
-      <center>Scrum - Board</center>
-    </h3>
-  </br></br>
-  <center><img style='height: 450px' src='images/board.png'></center>
-  </article>
-  <article>
-    <h3>
-      <center>Scrum - User Stories</center>
-    </h3>
-  </br></br>
-  <center><img style='height: 400px' src='images/uscard0.jpg'></center>
-  </article>
+  <center><img style='height: 500px' src='images/cannon.jpg'></center>
+</article>
 
 
-  <article>
-    <h3>
-      <center>Scrum - User Stories</center>
-    </h3>
-  </br></br>
-  <center><img style='height: 500px' src='images/uscard.png'></center>
-  </article>
+<article>
+  <h3>
+    <center>Agile - Cambio</center>
+  </h3>
+</br></br>
+<center><img style='height: 500px' src='images/missile.jpg'></center>
+</article>
 
-  <article>
-    <h1>
-      <center>Scrum - Roles</center>
-    </h1>
-  </br></br>
-  </article>
+<article>
+  <h3>
+    <center>Agile - Resumen</center>
+  </h3>
+</br></br>
+<p>Personas y equipos</p>
+<p>Colaboracíón con el cliente</p>
+<p>Adaptación al cambio</p>
 
-  <article>
-    <h3>
-      <center>Scrum - Roles</center>
-    </h3>
-  </br></br>
-  <p>Roles cerdo</p>
+</article>
+
+<article>
+  <h1>
+    <center>Scrum</center>
+  </h1>
+</article>
+
+<article>
+  <h3>
+    <center>Scrum</center>
+  </h3>
   <ul class="build">
     <li>
-      Product Owner
+      Desarrollo iterativo incremental
     </li>
     <li>
-      Scrum master
+      Sprints
     </li>
     <li>
-      Equipo
+      Prácticas + Roles
     </li>
   </ul>
-  <p>Roles gallina</p>
-  <ul class="build">
-    <li>
-      Usuarios de la aplicación
-    </li>
-    <li>
-      Clientes
-    </li>
-    <li>
-      Managers
-    </li>
-  </ul>
-  </article>
+</article>
 
-  <article>
-    <h1>
-      <center>Scrum - Product Owner</center>
-    </h1>
-    <center><p>Decide qué hacer y cuándo hacerlo</p>
+<article>
+  <h3>
+    <center>Scrum - Sprint</center>
+  </h3>
+</br></br>
+<center><img style='height: 400px' src='images/waterfall.png'></center>
+</article>
+
+<article>
+  <h3>
+    <center>Scrum - Sprint</center>
+  </h3>
+</br></br>
+<center><img style='height: 400px' src='images/scrum.png'></center>
+</article>
+
+
+<article>
+  <h3>
+    <center>Scrum - Incremental vertical</center>
+  </h3>
+</br></br>
+<center><img style='height: 300px' src='images/incremental.png'></center>
+</article>
+
+<article>
+  <h3>
+    <center>Scrum - Board</center>
+  </h3>
+</br></br>
+<center><img style='height: 450px' src='images/board.png'></center>
+</article>
+<article>
+  <h3>
+    <center>Scrum - User Stories</center>
+  </h3>
+</br></br>
+<center><img style='height: 400px' src='images/uscard0.jpg'></center>
+</article>
+
+
+<article>
+  <h3>
+    <center>Scrum - User Stories</center>
+  </h3>
+</br></br>
+<center><img style='height: 500px' src='images/uscard.png'></center>
+</article>
+
+<article>
+  <h1>
+    <center>Scrum - Roles</center>
+  </h1>
+</br></br>
+</article>
+
+<article>
+  <h3>
+    <center>Scrum - Roles</center>
+  </h3>
+</br></br>
+<p>Roles cerdo</p>
+<ul class="build">
+  <li>
+    Product Owner
+  </li>
+  <li>
+    Scrum master
+  </li>
+  <li>
+    Equipo
+  </li>
+</ul>
+<p>Roles gallina</p>
+<ul class="build">
+  <li>
+    Usuarios de la aplicación
+  </li>
+  <li>
+    Clientes
+  </li>
+  <li>
+    Managers
+  </li>
+</ul>
+</article>
+
+<article>
+  <h1>
+    <center>Scrum - Product Owner</center>
+  </h1>
+  <center><p>Decide qué hacer y cuándo hacerlo</p>
     <p>"Cliente con perspectiva de usuario"</p></center>
   </br>
-  </article>
+</article>
 
-  <article>
-    <h1>
-      <center>Scrum - Scrum Master</center>
-    </h1>
-    <center><p>Garantiza que Agile se está cumpliendo</p></center>
-  </br>
-  </article>
+<article>
+  <h1>
+    <center>Scrum - Scrum Master</center>
+  </h1>
+  <center><p>Garantiza que Agile se está cumpliendo</p></center>
+</br>
+</article>
 
-    <article>
-    <h1>
-      <center>Scrum - Equipo de Desarrollo</center>
-    </h1>
-    <center><p>Entregar el producto</p></center>
-  </br>
-  </article>
+<article>
+  <h1>
+    <center>Scrum - Equipo de Desarrollo</center>
+  </h1>
+  <center><p>Entregar el producto</p></center>
+</br>
+</article>
 
-  <article>
-    <h3>
-      <center>Scrum - Product Owner VS Team</center>
-    </h3>
-    <center><img style='height: 500px' src='images/rightthings.jpg'></center>
+<article>
+  <h3>
+    <center>Scrum - Product Owner VS Team</center>
+  </h3>
+  <center><img style='height: 500px' src='images/rightthings.jpg'></center>
 
-  </article>
+</article>
 
-  <article>
-    <h1>
-      <center>Scrum - Daily scrum (standup meeting)</center>
-    </h1>
-  </br></br>
-  </article>
+<article>
+  <h1>
+    <center>Scrum - Daily scrum (standup meeting)</center>
+  </h1>
+</br></br>
+</article>
 
-  <article>
-    <h1>
-      <center>Scrum - Sprint planning</center>
-    </h1>
-  </br></br>
-  </article>
+<article>
+  <h1>
+    <center>Scrum - Sprint planning</center>
+  </h1>
+</br></br>
+</article>
 
-  <article>
-    <h1>
-      <center>Scrum - Sprint preview (demo)</center>
-    </h1>
-  </br></br>
-  </article>
+<article>
+  <h1>
+    <center>Scrum - Sprint preview (demo)</center>
+  </h1>
+</br></br>
+</article>
 
-  <article>
-    <h1>
-      <center>Scrum - Retrospectivas</center>
-    </h1>
-  </br></br>
-  </article>
-  <article>
-    <h3>
-      <center>Scrum - Resumen</center>
-    </h3>
-    <br><br>
+<article>
+  <h1>
+    <center>Scrum - Retrospectivas</center>
+  </h1>
+</br></br>
+</article>
+<article>
+  <h3>
+    <center>Scrum - Resumen</center>
+  </h3>
+  <br><br>
   <center><img style='height: 450px' src='images/scrumresumen.jpg'></center>
-  </article>
+</article>
 
 
-    <article>
-    <h3>
-      <center>Kanban</center>
-    </h3>
-  </br></br>
-  <p>Visualización del trabajo</p>
-  <p>Equipos autoorganizativos</p>
-  <p>Mejora continua</p>
-  </article>
+<article>
+  <h3>
+    <center>Kanban</center>
+  </h3>
+</br></br>
+<p>Visualización del trabajo</p>
+<p>Equipos autoorganizativos</p>
+<p>Mejora continua</p>
+</article>
 
-      <article>
-    <h3>
-      <center>Kanban</center>
-    </h3>
-  </br></br>
-    <center><img style='height: 500px' src='images/kanbanvsscrum.png'></center>
-
-
-  </article>
-  <article>
-    <h3>
-      <center>Scrumban</center>
-    </h3>
-  </br></br>
-  <center><img style='height: 400px' src='images/scrumban.jpg'></center>
-  </article>
-
-    <article>
-    <h3>
-      <center>Scrumban</center>
-    </h3>
-  </br></br>
-  <center><img style='height: 450px' src='images/scrumban2.jpg'></center>
-  </article>
-
-  <article>
-    <h1>
-      <center>¿Y ahora qué?</center>
-    </h1>
-  </article>
+<article>
+  <h3>
+    <center>Kanban</center>
+  </h3>
+</br></br>
+<center><img style='height: 500px' src='images/kanbanvsscrum.png'></center>
 
 
-  <article>
-    <h1>
-      <center>Kaizen VS Kaikaku</center>
-    </h1>
+</article>
+<article>
+  <h3>
+    <center>Scrumban</center>
+  </h3>
+</br></br>
+<center><img style='height: 400px' src='images/scrumban.jpg'></center>
+</article>
 
-    <p>Kaizen: modelo orgánico</p>
-    <p>Kaikaku: ruptura</p>
-  </article>
+<article>
+  <h3>
+    <center>Scrumban</center>
+  </h3>
+</br></br>
+<center><img style='height: 450px' src='images/scrumban2.jpg'></center>
+</article>
 
-
- <article>
-    <h1>
-      <center>¿Preguntas?</center>
-    </h1>
-
-
-  </article>
-
-
-  <article>
-    <h1>
-      <center>Muchas gracias</center>
-    </h1>
-
-      <center>agile-aragon.org</center>
-
-  </article>
+<article>
+  <h1>
+    <center>¿Y ahora qué?</center>
+  </h1>
+</article>
 
 
-  <article>
-    <h1>
-      <center>Definición de equipo</center>
-    </h1>
-  </article>
+<article>
+  <h1>
+    <center>Kaizen VS Kaikaku</center>
+  </h1>
 
-  <article>
-    <h1>
-      <center>Roles</center>
-    </h1>
-  </article>
+  <p>Kaizen: modelo orgánico</p>
+  <p>Kaikaku: ruptura</p>
+</article>
 
-  <article>
-    <h1>
-      <center>Estimaciones</center>
-    </h1>
-  </article>
 
-    <article>
-    <h1>
-      <center>¿Sprints?</center>
-    </h1>
-  </article>
+<article>
+  <h1>
+    <center>¿Preguntas?</center>
+  </h1>
 
-      <article>
-    <h1>
-      <center>Tamaño del sprint</center>
-    </h1>
-  </article>
 
-  </section>
-  </body>
-  </html>
+</article>
+
+
+<article>
+  <h1>
+    <center>Muchas gracias</center>
+  </h1>
+
+  <center>agile-aragon.org</center>
+
+</article>
+
+
+<article>
+  <h1>
+    <center>Definición de equipo</center>
+  </h1>
+</article>
+
+<article>
+  <h1>
+    <center>Roles</center>
+  </h1>
+</article>
+
+<article>
+  <h1>
+    <center>Estimaciones</center>
+  </h1>
+</article>
+
+<article>
+  <h1>
+    <center>¿Sprints?</center>
+  </h1>
+</article>
+
+<article>
+  <h1>
+    <center>Tamaño del sprint</center>
+  </h1>
+</article>
+
+</section>
+</body>
+</html>
