--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <article>
       <h1>
-        <center>¿Por qué llevan traje en algunas empresas de software?</center>
+        <center>Valores</center>
       </h1>
     </article>
 
@@ -59,7 +59,7 @@
 
     <article>
       <h1>
-        <center>Las reglas no valen</center>
+        <center>Hacemos las cosas de forma distinta</center>
       </h1>
     </article>
 
@@ -323,11 +323,27 @@
 
 <article>
   <h1>
-    <center>Kaizen VS Kaikaku</center>
+    <center>Definición de equipo</center>
   </h1>
+</article>
 
-  <p>Kaizen: modelo orgánico</p>
-  <p>Kaikaku: ruptura</p>
+
+<article>
+  <h1>
+    <center>Equipo autoorganizado</center>
+  </h1>
+</article>
+
+<article>
+  <h1>
+    <center>Bus factor</center>
+  </h1>
+</article>
+
+<article>
+  <h1>
+    <center>Calidad del software</center>
+  </h1>
 </article>
 
 
@@ -350,35 +366,6 @@
 </article>
 
 
-<article>
-  <h1>
-    <center>Definición de equipo</center>
-  </h1>
-</article>
-
-<article>
-  <h1>
-    <center>Roles</center>
-  </h1>
-</article>
-
-<article>
-  <h1>
-    <center>Estimaciones</center>
-  </h1>
-</article>
-
-<article>
-  <h1>
-    <center>¿Sprints?</center>
-  </h1>
-</article>
-
-<article>
-  <h1>
-    <center>Tamaño del sprint</center>
-  </h1>
-</article>
 
 </section>
 </body>
