--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <section class='slides layout-regular template-default'>
 
-    <article>
+    <article >
       <h1>
         De Agile al equipo autoorganizado 
       </h1>
@@ -38,10 +38,13 @@
       </h1>
     </article>
 
-    <article>
+    <article class='manifesto'>
       <h1>
         <center>Agile Manifesto</center>
       </h1>
+          <h3>
+        <center>www.agilemanifesto.org</center>
+      </h3>
 
     </article>
 
@@ -179,53 +182,6 @@
 </br></br>
 </article>
 
-<article>
-  <h3>
-    <center>Scrum - Roles</center>
-  </h3>
-</br></br>
-<p>Roles cerdo</p>
-<ul class="build">
-  <li>
-    Product Owner
-  </li>
-  <li>
-    Scrum master
-  </li>
-  <li>
-    Equipo
-  </li>
-</ul>
-<p>Roles gallina</p>
-<ul class="build">
-  <li>
-    Usuarios de la aplicación
-  </li>
-  <li>
-    Clientes
-  </li>
-  <li>
-    Managers
-  </li>
-</ul>
-</article>
-
-<article>
-  <h1>
-    <center>Scrum - Product Owner</center>
-  </h1>
-  <center><p>Decide qué hacer y cuándo hacerlo</p>
-    <p>"Cliente con perspectiva de usuario"</p></center>
-  </br>
-</article>
-
-<article>
-  <h1>
-    <center>Scrum - Scrum Master</center>
-  </h1>
-  <center><p>Garantiza que Agile se está cumpliendo</p></center>
-</br>
-</article>
 
 <article>
   <h1>
@@ -278,45 +234,9 @@
   <center><img style='height: 450px' src='images/scrumresumen.jpg'></center>
 </article>
 
-
-<article>
-  <h3>
-    <center>Kanban</center>
-  </h3>
-</br></br>
-<p>Visualización del trabajo</p>
-<p>Equipos autoorganizativos</p>
-<p>Mejora continua</p>
-</article>
-
-<article>
-  <h3>
-    <center>Kanban</center>
-  </h3>
-</br></br>
-<center><img style='height: 500px' src='images/kanbanvsscrum.png'></center>
-
-
-</article>
-<article>
-  <h3>
-    <center>Scrumban</center>
-  </h3>
-</br></br>
-<center><img style='height: 400px' src='images/scrumban.jpg'></center>
-</article>
-
-<article>
-  <h3>
-    <center>Scrumban</center>
-  </h3>
-</br></br>
-<center><img style='height: 450px' src='images/scrumban2.jpg'></center>
-</article>
-
 <article>
   <h1>
-    <center>¿Y ahora qué?</center>
+    <center>Volviendo al manifiesto</center>
   </h1>
 </article>
 
