--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta charset='utf-8'>
   <script
   src='js/slides.js'></script>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="index.css" />
 
 </head>
@@ -42,29 +44,12 @@
       <h1>
         <center>Agile Manifesto</center>
       </h1>
-          <h3>
+      <h3>
         <center>www.agilemanifesto.org</center>
       </h3>
 
     </article>
 
-    <article>
-      <h1>
-        <center>Valores</center>
-      </h1>
-    </article>
-
-    <article>
-      <h1>
-        <center>Herencia</center>
-      </h1>
-    </article>
-
-    <article>
-      <h1>
-        <center>Hacemos las cosas de forma distinta</center>
-      </h1>
-    </article>
 
     <article>
       <h3>
@@ -73,6 +58,31 @@
     </br></br>
     <center><img style='height: 500px' src='images/manifesto.png'></center>
   </article>
+
+  <article>
+    <h1>
+      <center>Hacemos algo</center>
+    </h1>
+     <h3 class='big'>
+      <center>distinto</center>
+    </h3>
+  </article>
+
+  <article>
+    <h1>
+    <center>¿desarrolladores</center>
+    </h1>
+    <h3 class='big'>
+    <center>con traje?</center>
+    </h3>
+  </article>
+
+  <article>
+    <h1>
+      <center>Herencia</center>
+    </h1>
+  </article>
+
 
 
   <article>
@@ -85,11 +95,8 @@
 
 
 <article>
-  <h3>
-    <center>Agile - Cambio</center>
-  </h3>
-</br></br>
-<center><img style='height: 500px' src='images/missile.jpg'></center>
+
+  <center><img style='height: 500px' src='images/missile.jpg'></center>
 </article>
 
 <article>
@@ -187,7 +194,7 @@
   <h1>
     <center>Scrum - Equipo de Desarrollo</center>
   </h1>
-  <center><p>Entregar el producto</p></center>
+  <center><h3>Entregar el producto</h3></center>
 </br>
 </article>
 
@@ -230,7 +237,7 @@
   <h3>
     <center>Scrum - Resumen</center>
   </h3>
-  <br><br>
+  <br><br><br><br>
   <center><img style='height: 450px' src='images/scrumresumen.jpg'></center>
 </article>
 
@@ -281,7 +288,7 @@
     <center>Muchas gracias</center>
   </h1>
 
-  <center>agile-aragon.org</center>
+  <center><h3>agile-aragon.org</h3></center>
 
 </article>
 
