#Added reverse mode

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </article>
 
 
-    <article>
+    <article class='reverse'>
       <h3>
         <center>Agile Manifesto</center>
       </h3>
@@ -83,7 +83,33 @@
     </h1>
   </article>
 
+  <article>
+    <h1>
+      <center>No es un</center>
+    </h1>
+    <h3>
+      <center>TORNILLO</center>
+    </h3>
+  </article>
 
+  <article class='reverse'>
+    <h1>
+      <center>Todo</center>
+    </h1>
+    <h3>
+      <center>cambia</center>
+    </h3>
+  </article>
+
+
+  <article>
+    <h1>
+      <center>Alta</center>
+    </h1>
+    <h3>
+      <center>incertidumbre</center>
+    </h3>
+  </article>
 
   <article>
     <h3>
