--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>
         Javier Martínez
         <br>
-        18 de septiembre 2015
+        25 de septiembre 2015
       </p>
     </article>
 
@@ -94,6 +94,15 @@
 
   <article class='reverse'>
     <h1>
+      <center>"Esto NO ES</center>
+    </h1>
+    <h3>
+      <center>lo que pedí"</center>
+    </h3>
+  </article>
+
+  <article class='reverse'>
+    <h1>
       <center>Todo</center>
     </h1>
     <h3>
@@ -111,21 +120,18 @@
     </h3>
   </article>
 
-  <article>
-    <h3>
-      <center>Agile - Cambio</center>
-    </h3>
-  </br></br>
+  <article class='reverse'>
+</br>
   <center><img style='height: 500px' src='images/cannon.jpg'></center>
 </article>
 
 
-<article>
-
+<article class='reverse'>
+</br>
   <center><img style='height: 500px' src='images/missile.jpg'></center>
 </article>
 
-<article>
+<article >
   <h3>
     <center>Agile - Resumen</center>
   </h3>
@@ -136,77 +142,32 @@
 
 </article>
 
-<article>
-  <h1>
-    <center>Scrum</center>
-  </h1>
-</article>
 
-<article>
+<article class='reverse'>
   <h3>
-    <center>Scrum</center>
-  </h3>
-  <ul class="build">
-    <li>
-      Desarrollo iterativo incremental
-    </li>
-    <li>
-      Sprints
-    </li>
-    <li>
-      Prácticas + Roles
-    </li>
-  </ul>
-</article>
-
-<article>
-  <h3>
-    <center>Scrum - Sprint</center>
+    <center>Waterfall</center>
   </h3>
 </br></br>
 <center><img style='height: 400px' src='images/waterfall.png'></center>
 </article>
 
-<article>
+<article class='reverse'>
   <h3>
-    <center>Scrum - Sprint</center>
+    <center>Sprint</center>
   </h3>
 </br></br>
 <center><img style='height: 400px' src='images/scrum.png'></center>
 </article>
 
 
-<article>
+<article class='reverse'>
   <h3>
-    <center>Scrum - Incremental vertical</center>
+    <center>Incremental vertical</center>
   </h3>
-</br></br>
+</br></br></br>
 <center><img style='height: 300px' src='images/incremental.png'></center>
 </article>
 
-<article>
-  <h3>
-    <center>Scrum - Board</center>
-  </h3>
-</br></br>
-<center><img style='height: 450px' src='images/board.png'></center>
-</article>
-<article>
-  <h3>
-    <center>Scrum - User Stories</center>
-  </h3>
-</br></br>
-<center><img style='height: 400px' src='images/uscard0.jpg'></center>
-</article>
-
-
-<article>
-  <h3>
-    <center>Scrum - User Stories</center>
-  </h3>
-</br></br>
-<center><img style='height: 500px' src='images/uscard.png'></center>
-</article>
 
 <article>
   <h1>
@@ -218,15 +179,15 @@
 
 <article>
   <h1>
-    <center>Scrum - Equipo de Desarrollo</center>
+    <center>Equipo de Desarrollo</center>
   </h1>
   <center><h3>Entregar el producto</h3></center>
 </br>
 </article>
 
-<article>
+<article class='reverse'>
   <h3>
-    <center>Scrum - Product Owner VS Team</center>
+    <center>Product Owner VS Team</center>
   </h3>
   <center><img style='height: 500px' src='images/rightthings.jpg'></center>
 
@@ -234,21 +195,7 @@
 
 <article>
   <h1>
-    <center>Scrum - Daily scrum (standup meeting)</center>
-  </h1>
-</br></br>
-</article>
-
-<article>
-  <h1>
-    <center>Scrum - Sprint planning</center>
-  </h1>
-</br></br>
-</article>
-
-<article>
-  <h1>
-    <center>Scrum - Sprint preview (demo)</center>
+    <center>Daily scrum (standup meeting)</center>
   </h1>
 </br></br>
 </article>
