--- a/index.html
+++ b/index.html
@@ -40,6 +40,39 @@
       </h1>
     </article>
 
+    <article>
+      <h1>
+        <center>Informática</center>
+      </h1>
+    </article>
+
+    <article class='reverse'>
+    <h1>
+      <center>"Esto NO ES</center>
+    </h1>
+    <h3>
+      <center>lo que pedí"</center>
+    </h3>
+  </article>
+
+    <article class='reverse'>
+    <h1>
+      <center>"Esto está</center>
+    </h1>
+    <h3>
+      <center>OBSOLETO"</center>
+    </h3>
+  </article>
+
+      <article class='reverse'>
+    <h1>
+      <center>"Hay que volver a hacerlo</center>
+    </h1>
+    <h3>
+      <center>desde cero"</center>
+    </h3>
+  </article>
+
     <article class='manifesto'>
       <h1>
         <center>Agile Manifesto</center>
@@ -49,7 +82,6 @@
       </h3>
 
     </article>
-
 
     <article class='reverse'>
       <h3>
@@ -63,17 +95,17 @@
     <h1>
       <center>Hacemos algo</center>
     </h1>
-     <h3 class='big'>
+    <h3 class='big'>
       <center>distinto</center>
     </h3>
   </article>
 
   <article>
     <h1>
-    <center>¿desarrolladores</center>
+      <center>¿desarrolladores</center>
     </h1>
     <h3 class='big'>
-    <center>con traje?</center>
+      <center>con traje?</center>
     </h3>
   </article>
 
@@ -89,15 +121,6 @@
     </h1>
     <h3>
       <center>TORNILLO</center>
-    </h3>
-  </article>
-
-  <article class='reverse'>
-    <h1>
-      <center>"Esto NO ES</center>
-    </h1>
-    <h3>
-      <center>lo que pedí"</center>
     </h3>
   </article>
 
@@ -121,14 +144,14 @@
   </article>
 
   <article class='reverse'>
-</br>
+  </br>
   <center><img style='height: 500px' src='images/cannon.jpg'></center>
 </article>
 
 
 <article class='reverse'>
 </br>
-  <center><img style='height: 500px' src='images/missile.jpg'></center>
+<center><img style='height: 500px' src='images/missile.jpg'></center>
 </article>
 
 <article >
@@ -136,7 +159,7 @@
     <center>Agile - Resumen</center>
   </h3>
 </br></br>
-<p>Personas y equipos</p>
+<p>Hacemos algo diferente</p>
 <p>Colaboracíón con el cliente</p>
 <p>Adaptación al cambio</p>
 
